deployments/kubernetes/amazon-crawler-api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amazon-crawler-api
  namespace: task-processor
  labels:
    app: amazon-crawler-api
spec:
  selector:
    app: amazon-crawler-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
