deployments/kubernetes/amazon-crawler-api/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: amazon-crawler-api
  namespace: task-processor
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  ingressClassName: nginx
  rules:
    - host: amazon-crawler-api.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: amazon-crawler-api
                port:
                  number: 8080
